# packaging

./: LICENSE.txt  README.md
myapp/: main.py  requirements.txt
mylib/: .gitignore  build.sh  dev-requirements.txt  pyproject.toml
mylib/mylib/: constants.py
mylib/mylib/nested/: math.py
