# https://setuptools.pypa.io/en/latest/userguide/quickstart.html
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mylib"
version = "0.0.1"
authors = [
    {name = "Me", email = "me@example.com"},
]
description = "My package description"
readme = "README.txt"
requires-python = ">=3.9"
keywords = ["one", "two"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pika == 1.3.1",
]

[tool.setuptools]
license-files = ["LICENSE.txt"]
