# https://setuptools.pypa.io/en/latest/userguide/quickstart.html
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mylib"
version = "0.0.1"
authors = [
    {name = "Me", email = "me@example.com"},
]
description = "My package description"
readme = "README.txt"
requires-python = ">=3.9"
keywords = ["one", "two"]
classifiers = [
    "Programming Language :: Python :: 3",
]
# Flag the dependencies as dynamic & read them from requirements.txt below
dynamic = ["dependencies"]

[tool.setuptools]
license-files = ["LICENSE.txt"]

[tool.setuptools.dynamic]
# Define the requirements dynamically using requirements.txt
# NOTE: This is marked as "beta" functionality, but it is probably stable:
#   https://github.com/pypa/setuptools/discussions/3758
dependencies = {file = ["requirements.txt"]}
